# bakeoff_spinoff

./: .env  .gitignore  BUGFIX_SUMMARY.md  EXECUTION_TRACE.md  FINAL_UX_IMPROVEMENTS.md  FRONTENDREADME.md  MIGRATION_GUIDE.md  Makefile  README.md  README2.md  REFACTORING_SUMMARY.md  SSE_BUFFERING_FIX.md  STEP_BY_STEP_FLOW.md  STREAMING_EXPLAINED.md  STREAMING_IMPLEMENTATION.md  STREAMING_UX_IMPROVEMENTS.md  api.json  chart_service.py  main.py  pyproject.toml  simple_chart_server.py  test_artifacts.py  test_static.html
.claude/: settings.local.json
agents/a2a_remote_agent/: agent.py
agents/banking_agent/: IMPLEMENTATIONGUIDE.md  agent.py
agents/banking_agent/sub_agents/: agent.py  matplotlib.py  tools.py
agents/live_api_agent/: agent.py
agents/my_agent/: agent.py
front-end/: next.config.ts  package-lock.json  package.json
front-end/app/: globals.css  page.tsx
front-end/components/: EventTimeline.tsx  MessageContent.tsx  ToolActivity.tsx
google_search_agent/: agent.py
my_agent/: agent.py
static/: index.html
static/basic/: index.html
static/basic/js/: app.js  (+4 more)
static/js/: app.js  audio-player-worklet.js  audio-player.js  audio-recorder-worklet.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
static/live/: app-controller.js  audio-client.js  audio-processor.js  config.js  debug-monitor-extra.js  debug-monitor.js  improvements.md  index.html  message-queue-manager.js  multimodal-client.js  priority-queue.js  processing-queue.js  queue-debug.js  queue-metrics.js  session-manager.js  state-manager.js  ui-manager.js
(+11 files in other folders)
