[project]
name = "adk-streaming-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk[a2a]>=1.10.0",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "google-genai",
    "websockets",
    "matplotlib",
    "numpy"
]

[tool.setuptools]
packages = ["agents"]
